--- a/scss/03_layouts/_03_B_main_article.scss
+++ b/scss/03_layouts/_03_B_main_article.scss
@@ -14,7 +14,7 @@
             font-size: 1.75em;
         }
         &--coeur{
-            background-image: url(/sources/picto/picto_coeur.png);
+            background-image: url(../sources/picto/picto_coeur.png);
             background-size: 25px 22px;
             margin: 38px 36px 0px 0px;
             width: 25px;
@@ -22,7 +22,7 @@
             cursor: pointer;
 
             &:hover{
-                background-image: url(/sources/picto/picto_coeur_rose.png);
+                background-image: url(../sources/picto/picto_coeur_rose.png);
                 background-size: 25px 22px;
                 transition: ease-in-out 1s;
             }
