Ajout loader en fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,7 @@ body{
     background: linear-gradient(#e872da, #9f5adc);
     height: 100vh;
     width: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 9;
     display: flex;
     justify-content: center;
